assets/css/_general.scss
html {
    height: 100%;
}

body {
    background-color: $primary-white;
    font-family: 'Open Sans';
    margin: 0;
    padding: 0;
    height: 100%;
    overflow: hidden;
    
}

#main {
    height: 100%;
}

#app {
    height: 100%;
    display: -webkit-box;
        display: -moz-box;
     display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.page-content {
    overflow-x: hidden;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    order: 3;
    padding-bottom: 3.5em;
    
    * {
        flex-shrink: 0;
    }
}

.search-bar {
    text-align: center;
    width:95%;
    height: 4em;
    padding: 0;
    margin: 0;
    margin-left: auto;
    margin-right: auto;
    input {
        width: 100%;
        height: 100%;
        font-size: 2em;
        font-family: 'Open Sans';
        margin:0;
        padding-left: 1em;
        color: $dark-grey;
        background-color: $primary-white;
        box-shadow: 0;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        -ms-box-sizing: border-box;
        box-sizing: border-box;
        border: 0;
        border-radius: .4em;
        text-align: center;
    }
}

.navbar {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 3.5em;
    background-color: $primary-white;
    text-align: center;
    order: 6;
    flex-grow: 1;
    border-top: 1px solid $light-grey;

    .lines-icon {
        font-size: 1.8em;
        display: inline-block;
        margin-top: .1em;
    }

    p {
        font-weight: 600;
    }

    .highlight {
        color: $accent-blue;
    }

    .highlightMap {
        color: $accent-blue;
    }
    .highlightProfiel {
        color: $accent-blue;
    }
    .highlightHome {
        color: $accent-blue;
    }
}

.separation {
    width: 100%;
    margin: 0;
    height: .4em;
    background-color: $light-grey;
    text-align: center;
    order: 2;
    flex-shrink: 0;
}

.nav-button {
    font-family: 'Open Sans';
    display: inline-block;
    text-align: center;
    color: $dark-grey;
    width: 25%;
    margin-top: .3em;

    p {
        font-size: .7em;
        margin-top: 0;
        display: block;
    }
}    

.headbar {
    height: 3em;
    background-color: $clear-grey;
    border-bottom: 1px solid $light-grey;
    font-family: 'Suez One';
    text-align: center;
    color: $dark-grey;
    padding-top: 1em;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    order: 1;

    .view-icon {
        display: inline-block;
        margin-top: 0;
        position: relative;
        top: .2em;
        font-size: 2em;
        margin-right: .3em;
    }

    .title-text {
        display: inline-block;
        margin-top: .8em;
        font-size: 1em;
    }

    .icon-map {
        position: absolute;
        right: .4em;
        top: .6em;
    }

    .icon-list {
        @extend .icon-map;
    }

    .icon-picture {
        @extend .icon-map;
    }

    .icon-plus {
        @extend .view-icon;
        position: absolute;
        left: .6em;
        top: .6em;
    }

    .back-button {
        font-family: 'Open Sans';
        font-size: 1em;
        position: absolute;
        color: $accent-blue;
        top: .7em;
        left: 1em;
    }

    .icon-arrow-left {
        font-size: 1.2em;
        font-weight: 900;
        position: relative;
        left: 0em;
        top: .15em;
    }

    .confirm {
        @extend .back-button;
        @extend .icon-map;
        width: 5em;
        left: 17.5em;
    }
}

.headbar-ptv {
    @extend .headbar;
    height: 15em;
}

